--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
     font-weight: normal;
 }
 body {font-family: 'DM Sans', sans-serif;
-    font-family: 'Mulish', sans-serif;}
+}
 
 .header {
     background-color: rgba(255, 113, 67, .27);
@@ -82,6 +82,7 @@ body {font-family: 'DM Sans', sans-serif;
 }
 
 .about__text{
+    font-family: 'Mulish', sans-serif;
     font-size: 20px;
     line-height: 30px;
     letter-spacing: -0.625263px;
